maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: not found: value nortfound
    if (!nortfound) {findNorth(); while (!estFaceMur()) {avance()}}
         ^